Appending crash with preview. #27158

Closed
opened 2011-04-24 16:44:15 +02:00 by Campbell Barton · 6 comments

%%%Appending an object from this file crashes blender because the internal preview and name lists are not in sync.
http://www.graphicall.org/ftp/ideasman42/Dog2.5.blend%%%

%%%Appending an object from this file crashes blender because the internal preview and name lists are not in sync. http://www.graphicall.org/ftp/ideasman42/Dog2.5.blend%%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

%%%fixed crash r36313. and made it print an error, but this may still be a bug. leaving open.%%%

%%%fixed crash r36313. and made it print an error, but this may still be a bug. leaving open.%%%
Member

%%%Hi Campbell,

I've attached a patch that might fix the issue - I think that rather than just copying the struct it neads to be read properly. Unfortunately I can't currently test with 64 bits, so it would help if you could give it a try and see if your error message still appears.

  • Andrea
    %%%
%%%Hi Campbell, I've attached a patch that might fix the issue - I think that rather than just copying the struct it neads to be read properly. Unfortunately I can't currently test with 64 bits, so it would help if you could give it a try and see if your error message still appears. - Andrea %%%
Author
Owner

%%%Thanks Andrea, this fixes the bug.%%%

%%%Thanks Andrea, this fixes the bug.%%%
Member

%%%Fixed in svn. Revision: 36757

Thanks Campbell for reporting.
%%%

%%%Fixed in svn. Revision: 36757 Thanks Campbell for reporting. %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27158
No description provided.