fix crash [#27158] Appending crash with preview.